swagger-doc-bug-fix
